Fixing problem with background image when menu is opened on iOS devices

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -208,11 +208,7 @@ footer {
 
 @media (max-width: 777px) {
   body.open {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0; 
-    left: 0;
+    position: relative; 
     overflow: hidden;
   }
   header .menu-button {
