--- a/assets/scss/layout/_media-queries.scss
+++ b/assets/scss/layout/_media-queries.scss
@@ -9,11 +9,7 @@
 @media (max-width: 777px) {
   body.open {
     overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
   }
 
   header {
